terraform/security.tf
# ALB Security Group: Edit this to restrict access to the application
resource "aws_security_group" "lb" {
  name        = "sb-load-balancer-security-group"
  description = "controls access to the ALB"
  # vpc_id      = aws_vpc.main.id
  vpc_id = var.vpc_id


  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Traffic to the ECS cluster should only come from the ALB
resource "aws_security_group" "ecs_tasks" {
  name        = "sb-ecs-tasks-security-group"
  description = "allow inbound access from the ALB only"
  # vpc_id      = aws_vpc.main.id
  vpc_id = var.vpc_id


  ingress {
    protocol        = "tcp"
    from_port       = "8080"
    to_port         = "8080"
    security_groups = ["${aws_security_group.lb.id}"]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
/**
 * Security group for MySQL
 */
resource "aws_security_group" "mysql" {
  name        = "${var.project}-${var.environment}-mysql"
  description = "security group for ${var.project} mysql"
  # vpc_id      = aws_vpc.main.id
  vpc_id = var.vpc_id

  tags = {
    Name        = "${var.environment}-rds-mysql"
    Environment = "${var.environment}"
  }

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
